styled form, made html changes to achieve style

--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,14 @@
 
 ==============================*/
 
+body {
+  max-width: 1500px;
+  min-width: 1225px;
+  margin: auto;
+  height: 100vh;
+  background: #F1F1F1;
+}
+
 h1 {
   font-family: 'Source Code Pro', monospace;
   font-size: 36pt;
@@ -19,7 +27,7 @@ h1 {
 }
 
 p,
-form.contactform {
+.contactform {
   font-family: 'Lato', sans-serif;
   font-size: 14pt;
 }
@@ -50,9 +58,9 @@ a {
 }
 
 a:hover,
-.reset:hover,
-.submit:hover {
-  text-decoration: underline 2px;
+.reset input:hover,
+.submit input:hover {
+  text-decoration: underline 2;
   text-decoration-color: #0021A5;
   transition: .3s;
 }
@@ -60,12 +68,12 @@ a:hover,
 a:active,
 .reset:active,
 .submit:active {
-  text-decoration: underline 2px;
+  text-decoration: underline 2;
   text-decoration-color: #E87722;
   transition: .3s;
 }
 
-img.football {
+.football {
   float: left;
   width: 40%;
   padding: 40px 50px 10px 100px;
@@ -79,8 +87,9 @@ img.football {
 
 .container {
   display: inline;
-  width: 60%;
   padding: 40px 100px 10px 50px;
+  overflow: hidden;
+  min-width: 500px;
 }
 
 .email:before {
@@ -105,13 +114,37 @@ img.football {
 
 ==============================*/
 
-form.contactform {
-
-}
-
 .emailform label:after {
   content: "\f658";
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   padding-left: 5px;
+}
+
+.label_input_wrap {
+  display: block;
+}
+
+label {
+  padding: 20px 0 0;
+}
+
+.reset input,
+.submit input {
+  margin: 5px;
+  font-weight: bold;
+  padding: 5px;
+  background-color: #8B1F41;
+  color: white;
+}
+
+.reset,
+.submit {
+  display: inline;
+}
+
+input,
+textarea {
+  border: #8B1F41 solid 2px;
+  border-radius: 5px;
 }
